--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>smart-contract-assistant</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>Smart Contract Copilot</title>
+    <meta name="description" content="Team Conquerors - Smart Contract Copilot" />
+    <meta name="author" content="Team Conquerors ⚓" />
+    <link rel="icon" type="image/png" href="public/faviconTC.png" />
   </head>
 
   <body>
